feat(linting): enhance eslint and typescript strict rules
- Add eslint-import-resolver-typescript for better module resolution
- Implement comprehensive ESLint rules including import ordering and React hooks
- Enable strict TypeScript mode with additional type checking rules
- Update todo.md to reflect completed linting tasks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,31 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
+    
+    // Core strict mode settings
     "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "useUnknownInCatchVariables": true,
+    
+    // Additional strict checks
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "exactOptionalPropertyTypes": true,
+    
+    // Unused code detection
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
