test: set up testing infrastructure with Jest and React Testing Library
Add Jest configuration, test utilities, mock data, and setup files
Update package.json with test scripts and dependencies
Mark testing infrastructure setup as complete in todo.md

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,5 +59,6 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/__tests__/utils/mock-handlers.ts"],
+  "types": ["jest", "@testing-library/jest-dom"]
 }
