--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
     "postinstall": "prisma generate",
     "prepare": "husky install",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
@@ -31,6 +35,8 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.3",
     "@clerk/types": "^4.14.0",
+    "@cypress/react18": "^2.0.1",
+    "@cypress/webpack-dev-server": "^5.0.0",
     "@headlessui/react": "^2.1.2",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "5.21.1",
@@ -45,12 +51,21 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cypress": "^14.5.4",
     "embla-carousel-react": "^8.2.0",
+    "eslint-plugin-jest-dom": "^5.5.0",
+    "eslint-plugin-testing-library": "^7.6.3",
     "framer-motion": "^11.3.28",
     "hamburger-react": "^2.5.1",
     "input-otp": "^1.2.4",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
     "lucide-react": "^0.428.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.6",
