refactor: improve type safety and remove unused imports
test: add vitest integration for testing
fix: add null checks for user and email verification
style: clean up tailwind config and remove unused colors
docs: update README with new features and tech stack
chore: update todo list with additional integrations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,7 @@
         "name": "next"
       }
     ],
+    "types": ["jest", "@testing-library/jest-dom"],
     "paths": {
       "@/*": ["./src/*"],
       "@/components/*": ["./src/components/*"],
@@ -59,6 +60,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "src/__tests__/utils/mock-handlers.ts"],
-  "types": ["jest", "@testing-library/jest-dom"]
+  "exclude": ["node_modules", "src/__tests__/utils/mock-handlers.ts"]
 }
