--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
+    "vitest": "^3.2.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
