--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
+    "caniuse-lite": "^1.0.30001733",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cypress": "^14.5.4",
@@ -68,11 +69,13 @@
     "input-otp": "^1.2.4",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
+    "loops": "^5.0.1",
     "lucide-react": "^0.428.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-canvas-confetti": "^2.0.7",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-parallax-tilt": "^1.7.237",
