--- a/package.json
+++ b/package.json
@@ -39,7 +39,11 @@
     "predev": "npm run env:validate",
     "db:migrate:check": "npx prisma migrate diff --from-empty --to-schema-datamodel prisma/schema.prisma",
     "db:backup": "echo 'Backup command depends on your database provider'",
-    "db:restore": "echo 'Restore command depends on your database provider'"
+    "db:restore": "echo 'Restore command depends on your database provider'",
+    "sonar": "sonar-scanner",
+    "sonar:local": "sonar-scanner -Dsonar.host.url=http://localhost:9000",
+    "quality:check": "npm run lint && npm run type-check && npm run test:coverage",
+    "quality:fix": "npm run format && npm run lint -- --fix"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -61,6 +65,7 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.84.2",
@@ -128,7 +133,9 @@
     "prisma": "5.21.1",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.20.3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "sonarqube-scanner": "^4.0.1",
+    "jest-sonar-reporter": "^2.0.0"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
@@ -138,5 +145,10 @@
     "*.{json,css,md}": [
       "prettier --write"
     ]
+  },
+  "jestSonar": {
+    "reportPath": "coverage",
+    "reportFile": "test-report.xml",
+    "indent": 2
   }
 }
