--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -26,3 +26,14 @@ sonar.qualitygate.wait=true
 # Additional settings
 sonar.sourceEncoding=UTF-8
 sonar.scm.provider=git
+
+# Complexity settings
+sonar.javascript.complexity.threshold=10
+sonar.typescript.complexity.threshold=10
+
+# Additional metrics
+sonar.javascript.metrics.complexity=true
+sonar.typescript.metrics.complexity=true
+
+# Custom complexity rules
+sonar.javascript.custom.rules=complexity-rules.json
