--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -114,7 +114,22 @@
     "react/no-unescaped-entities": "warn",
     
     // Next.js specific rules (already included in next/core-web-vitals)
-    "@next/next/no-img-element": "warn"
+    "@next/next/no-img-element": "warn",
+    
+    // Complexity rules
+    "complexity": ["warn", { "max": 10 }],
+    "max-depth": ["warn", { "max": 4 }],
+    "max-lines": ["warn", { "max": 300, "skipBlankLines": true, "skipComments": true }],
+    "max-lines-per-function": ["warn", { "max": 50, "skipBlankLines": true, "skipComments": true }],
+    "max-nested-callbacks": ["warn", { "max": 3 }],
+    "max-params": ["warn", { "max": 4 }],
+    "max-statements": ["warn", { "max": 20 }],
+    "max-statements-per-line": ["error", { "max": 1 }],
+    
+    // TypeScript complexity rules
+    "@typescript-eslint/prefer-reduce-type-parameter": "warn",
+    "@typescript-eslint/prefer-return-this-type": "warn",
+    "@typescript-eslint/unified-signatures": "warn"
   },
   "env": {
     "browser": true,
