--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "caniuse-lite": "^1.0.30001733",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "critters": "^0.0.25",
     "csrf": "^3.1.0",
     "cypress": "^14.5.4",
     "embla-carousel-react": "^8.2.0",
@@ -120,6 +121,7 @@
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "vitest": "^3.2.4",
+    "web-vitals": "^5.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
