--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/csrf": "^3.1.3",
     "@types/jest": "^30.0.0",
+    "@types/jest-axe": "^3.5.9",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.3",
     "caniuse-lite": "^1.0.30001733",
