ci: implement comprehensive automated testing pipeline
- Add GitHub Actions workflows for unit, integration, and e2e tests
- Configure Lighthouse CI for performance and accessibility testing
- Set up Storybook visual regression testing with Chromatic
- Update package.json with new test scripts
- Mark automated testing as complete in todo.md

--- a/package.json
+++ b/package.json
@@ -53,7 +53,10 @@
     "quality:check": "npm run lint && npm run type-check && npm run test:coverage",
     "quality:fix": "npm run format && npm run lint -- --fix",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test-storybook": "test-storybook",
+    "test-storybook:ci": "test-storybook --ci",
+    "chromatic": "chromatic --exit-zero-on-changes"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
