--- a/package.json
+++ b/package.json
@@ -92,6 +92,8 @@
     "@types/jest-axe": "^3.5.9",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.3",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "caniuse-lite": "^1.0.30001733",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
